# s2

./: .dockerignore  Cargo.toml  Cross.toml  README.md  deny.toml  justfile
.claude/: settings.local.json
.github/workflows/: build-s2-lite.yml  bump-chart-version.yml  ci.yml  docker.yml  helm-release.yml  pr-title.yml  release-cli.yml  release-crates.yml  release-plz.yml  sdk-tests.yml  sync-specs.yaml
api/: CHANGELOG.md  Cargo.toml
api/src/: data.rs
api/src/v1/: access.rs  basin.rs  config.rs  error.rs  location.rs  mod.rs
api/src/v1/stream/: extract.rs  json.rs  mod.rs  s2s.rs
api/src/v1/stream/proto/: mod.rs
charts/s2-lite-helm/: Chart.yaml
cli/: CHANGELOG.md  Cargo.toml  schema.json
cli/src/: apply.rs  cli.rs  config.rs  error.rs  main.rs  ops.rs  types.rs
cli/src/tui/: app.rs  event.rs  mod.rs  text_input.rs  ui.rs
cli/tests/: cli.rs
common/: CHANGELOG.md  Cargo.toml
common/src/: caps.rs  encryption.rs  lib.rs  resource_spec.rs
common/src/record/: batcher.rs  command.rs  encryption.rs  envelope.rs  iterator.rs  metering.rs  mod.rs
common/src/types/: access.rs  basin.rs  config.rs  location.rs  mod.rs  resources.rs  stream.rs
docs/adr/: csek.md
docs/plans/: 2025-01-23-authorization-design.md  2025-01-23-authorization-impl.md
lite/: CHANGELOG.md  Cargo.toml  Dockerfile
lite/docs/: authentication.md  authorization-architecture.md
lite/src/: init.rs  lib.rs  server.rs  stream_id.rs
lite/src/auth/: httpsig.rs  keys.rs  mod.rs  revocation.rs  state.rs  token.rs  verify.rs
lite/src/backend/: append.rs  auth.rs  basins.rs  core.rs  error.rs  mod.rs  read.rs  store.rs  streamer.rs  streams.rs
lite/src/backend/bgtasks/: basin_deletion.rs  stream_doe.rs  stream_trim.rs
lite/src/backend/kv/: basin_deletion_pending.rs  basin_meta.rs  mod.rs  stream_doe_deadline.rs  stream_fencing_token.rs  stream_id_mapping.rs  stream_meta.rs  stream_record_data.rs  stream_record_timestamp.rs  stream_tail_position.rs  stream_trim_point.rs  timestamp.rs
lite/src/handlers/: mod.rs
lite/src/handlers/v1/: access_tokens.rs  basins.rs  error.rs  locations.rs  metrics.rs  middleware.rs  mod.rs  paths.rs  records.rs  streams.rs
lite/tests/: auth_http_test.rs  auth_test.rs
lite/tests/backend/common/: mod.rs  read.rs  setup.rs
lite/tests/backend/control_plane/: basin.rs  stream.rs
lite/tests/backend/data_plane/: append.rs  auto_create.rs  mixed.rs  read.rs  read_follow.rs
sdk/: CHANGELOG.md  Cargo.toml
sdk/examples/: docs_account_and_basins.rs  docs_configuration.rs  docs_metrics.rs  docs_streams.rs
sdk/src/: api.rs  client.rs  ops.rs  producer.rs  types.rs
sdk/src/session/: append.rs  read.rs
sdk/tests/: account_ops.rs  basin_ops.rs
sdk/tests/common/: mod.rs
