[workspace]
resolver = "2"
members = ["api", "cli", "common", "lite", "sdk"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/s2-streamstore/s2"
homepage = "https://s2.dev"

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
axum = "0.8"
axum-server = "0.8"
base64ct = "1.8"
blake3 = "1.8"
bytes = "1.11"
bytesize = "2.3"
clap = "4.6"
color-print = "0.3"
colored = "3.1"
compact_str = "0.9"
config = "0.15"
dashmap = "6.1"
dirs = "6.0"
enum-ordinalize = "4.3"
enumset = "1.1"
eyre = "0.6"
flate2 = "1.1"
futures = "0.3"
http = "1.4"
humantime = "2.3"
indexmap = "2.13"
indicatif = "0.18"
itertools = "0.14"
json_to_table = "0.12"
miette = "7.6"
mimalloc = "0.1"
mime = "0.3"
parking_lot = "0.12"
prometheus = "0.14"
proptest = "1.10"
prost = "0.14"
prost-build = "0.14"
rand = "0.10"
rcgen = { version = "0.14", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }
rkyv = "0.8"
rstest = "0.26"
rustls = "0.23"
s2-api = { path = "api", version = "0.27" }
s2-common = { path = "common", version = "0.30" }
s2-lite = { path = "lite", version = "0.29" }
s2-sdk = { path = "sdk", version = "0.26" }
schemars = "1.2"
serde = "1.0"
serde_json = "1.0"
slatedb = "0.11.2"
strum = "0.28"
tabled = "0.20"
thiserror = "2.0"
time = "0.3"
tokio = "1.50"
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "1.0"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = "5.4"
uuid = "1.22"
xxhash-rust = "0.8"
zstd = "0.13"

# Auth dependencies
biscuit-auth = "6.0"
bs58 = "0.5"
hex = "0.4"
httpsig = "0.0.20"
p256 = "0.13"
sha2 = "0.10"

[patch.crates-io]
utoipa = { git = "https://github.com/infiniteregrets/utoipa", rev = "9cd181d40ac0a50551ebe1995a4d73e8685890d6" }

[profile.release]
lto = true
