[package]
name = "s2-api"
version = "0.28.5"
description = "API types for S2, the durable streams API"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["s2", "durable", "streams", "log", "api"]
categories = ["api-bindings"]
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "CHANGELOG.md",
    "specs/s2/v1/s2.proto",
]

[features]
axum = ["dep:axum", "dep:sonic-rs", "s2-common/axum"]
utoipa = ["dep:utoipa"]
codegen = ["dep:prost-build"]

[dependencies]
axum = { workspace = true, optional = true }
base64ct = { workspace = true, features = ["alloc"] }
bytes = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
enumset = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
prost = { workspace = true }
s2-common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sonic-rs = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
utoipa = { workspace = true, optional = true, features = ["time"] }
zstd = { workspace = true }

[build-dependencies]
prost-build = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
