[package]
name = "s2-common"
version = "0.34.0"
description = "Common stuff for client and servers for S2, the durable streams API"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["s2", "durable", "streams", "log", "api"]

[features]
axum = ["dep:axum"]
clap = ["dep:clap"]
rkyv = ["dep:rkyv", "compact_str/rkyv"]
utoipa = ["dep:utoipa"]

[dependencies]
aegis = { workspace = true }
aes-gcm = { workspace = true, features = ["zeroize"] }
axum = { workspace = true, optional = true }
base64ct = { workspace = true, features = ["alloc"] }
blake3 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, optional = true, features = ["derive"] }
compact_str = { workspace = true, features = ["serde"] }
enumset = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
rkyv = { workspace = true, optional = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
time = { workspace = true }
utoipa = { workspace = true, optional = true, features = ["time"] }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
