[package]
name = "s2-sdk"
description = "Rust SDK for S2"
version = "0.29.3"
edition.workspace = true
license.workspace = true
repository = "https://github.com/s2-streamstore/s2/tree/main/sdk"
homepage.workspace = true
documentation = "https://docs.rs/s2-sdk/latest/s2_sdk/"
keywords = ["s2", "durable", "streams", "client", "sdk"]
categories = ["api-bindings", "database"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
features = ["rustls-aws-lc-rs", "rustls-ring"]

[features]
default = ["rustls-aws-lc-rs"]
_hidden = []
rustls-aws-lc-rs = ["hyper-rustls/aws-lc-rs", "rustls/aws-lc-rs"]
rustls-ring = ["hyper-rustls/ring", "rustls/ring"]

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "gzip", "zstd"] }
async-stream = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = "1"
http-body-util = "0.1"
hyper = "1.9"
hyper-rustls = { version = "0.27", default-features = false, features = ["http2", "native-tokio", "tls12"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1", "http2"] }
pin-project-lite = "0.2"
prost = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
s2-api = { workspace = true }
s2-common = { workspace = true }
secrecy = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "io-util", "sync"] }
tokio-muxt = "0.7"
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["rt", "codec"] }
tracing = { workspace = true }
url = "2.5"
urlencoding = "2.1"
uuid = { workspace = true, features = ["v4", "fast-rng"] }

[dev-dependencies]
assert_matches = "1.5"
rstest = { workspace = true }
test-context = { version = "0.5" }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-shared-rt = "0.1"

[[example]]
# `doc-scrape-examples` requires *any* one example to specify the option.
name = "create_basin"
doc-scrape-examples = true
